--- a/EasyChat/Views/Pages/SettingView.axaml
+++ b/EasyChat/Views/Pages/SettingView.axaml
@@ -10,6 +10,7 @@
              xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              xmlns:converts="clr-namespace:EasyChat.Converters;assembly=EasyChat"
              xmlns:dataConverters="clr-namespace:Avalonia.Data.Converters;assembly=Avalonia.Base"
+             xmlns:System="clr-namespace:System;assembly=System.Runtime"
              x:DataType="viewModels:SettingViewModel"
              mc:Ignorable="d">
     <UserControl.Resources>
@@ -152,6 +153,60 @@
                                     <TextBox MinWidth="300"
                                              Text="{Binding ProxyConf.ProxyUrl}"
                                              Watermark="{x:Static lang:Resources.ProxyAddrQuestion}" />
+                                </StackPanel>
+                            </StackPanel>
+                        </suki:GlassCard>
+                    </suki:SettingsLayoutItem.Content>
+                </suki:SettingsLayoutItem>
+
+                <suki:SettingsLayoutItem Header="{x:Static lang:Resources.SelectionTranslation}">
+                    <suki:SettingsLayoutItem.Content>
+                        <suki:GlassCard>
+                            <StackPanel>
+                                <DockPanel Margin="0 0 0 10">
+                                    <TextBlock Text="{x:Static lang:Resources.EnableSelectionTranslation}"
+                                               VerticalAlignment="Center" FontWeight="Bold" />
+                                    <ToggleSwitch IsChecked="{Binding SelectionTranslationConf.Enabled}"
+                                                  HorizontalAlignment="Right"
+                                                  OnContent="" OffContent="" />
+                                </DockPanel>
+                                <StackPanel Orientation="Horizontal" Spacing="30" Margin="0 5 0 5">
+                                    <TextBlock FontWeight="Bold" VerticalAlignment="Center"
+                                               Text="{x:Static lang:Resources.TransEngine}" />
+                                    <!-- Currently only AI is supported -->
+                                    <ComboBox SelectedItem="{Binding SelectionTranslationConf.Provider}"
+                                              MinWidth="150"
+                                              IsEnabled="False">
+                                        <ComboBox.Items>
+                                            <System:String>AI</System:String>
+                                        </ComboBox.Items>
+                                    </ComboBox>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Spacing="30" Margin="0 5 0 5">
+                                    <TextBlock FontWeight="Bold" VerticalAlignment="Center"
+                                               Text="{x:Static lang:Resources.UsingAiModel}" />
+                                    <ComboBox ItemsSource="{Binding ConfiguredModels}"
+                                              SelectedValue="{Binding SelectionTranslationConf.AiModelId}"
+                                              SelectedValueBinding="{Binding Id}"
+                                              MinWidth="150">
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                                    <Panel Width="20" Height="20">
+                                                        <Border ClipToBounds="True" CornerRadius="4"
+                                                                IsVisible="{Binding ModelType, Converter={x:Static converts:AiModelTypeConverters.IsNotCustom}}">
+                                                            <Image Source="{Binding ModelType, Converter={x:Static converts:AiModelTypeConverters.ToIcon}}"
+                                                                   Stretch="UniformToFill" />
+                                                        </Border>
+                                                        <avalonia:MaterialIcon Kind="Robot" Width="20" Height="20"
+                                                                               IsVisible="{Binding ModelType, Converter={x:Static converts:AiModelTypeConverters.IsCustom}}" />
+                                                    </Panel>
+                                                    <TextBlock Text="{Binding Name}" VerticalAlignment="Center"
+                                                               Foreground="{DynamicResource SukiText}" />
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
                                 </StackPanel>
                             </StackPanel>
                         </suki:GlassCard>
@@ -968,21 +1023,7 @@
                         </suki:GlassCard>
                     </suki:SettingsLayoutItem.Content>
                 </suki:SettingsLayoutItem>
-                <suki:SettingsLayoutItem Header="{x:Static lang:Resources.SelectionTranslation}">
-                    <suki:SettingsLayoutItem.Content>
-                        <suki:GlassCard>
-                            <StackPanel>
-                                <DockPanel>
-                                    <TextBlock Text="{x:Static lang:Resources.EnableSelectionTranslation}"
-                                               VerticalAlignment="Center" FontWeight="Bold" />
-                                    <ToggleSwitch IsChecked="{Binding SelectionTranslationConf.Enabled}"
-                                                  HorizontalAlignment="Right"
-                                                  OnContent="" OffContent="" />
-                                </DockPanel>
-                            </StackPanel>
-                        </suki:GlassCard>
-                    </suki:SettingsLayoutItem.Content>
-                </suki:SettingsLayoutItem>
+
             </objectModel:ObservableCollection>
         </suki:SettingsLayout.Items>
     </suki:SettingsLayout>
