Refactor: Rename SelectionTranslateWindow to TranslationDictionaryWindow

--- a/EasyChat/Views/Windows/TranslationDictionaryWindowView.axaml
+++ b/EasyChat/Views/Windows/TranslationDictionaryWindowView.axaml
@@ -10,9 +10,9 @@
         xmlns:selection="clr-namespace:EasyChat.Models.Translation.Selection"
         xmlns:controls="clr-namespace:EasyChat.Controls"
         mc:Ignorable="d" d:DesignWidth="450" d:DesignHeight="400"
-        x:Class="EasyChat.Views.Windows.SelectionTranslateWindowView"
-        x:DataType="vm:SelectionTranslateWindowViewModel"
-        x:Name="SelectionWindow"
+        x:Class="EasyChat.Views.Windows.TranslationDictionaryWindowView"
+        x:DataType="vm:TranslationDictionaryWindowViewModel"
+        x:Name="TranslationWindow"
         Width="450" MinHeight="250" MaxHeight="600"
         SystemDecorations="None"
         Background="Transparent"
